# enthusiast

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.development.yml  docker-compose.yml  hello_world.py  pyproject.toml  requirements.txt
plugins/enthusiast-agent-catalog-enrichment/: README.md  pyproject.toml
plugins/enthusiast-agent-catalog-web-import/: README.md  pyproject.toml
plugins/enthusiast-agent-competitor-research/: README.md  pyproject.toml
plugins/enthusiast-agent-invoice-scanning/: README.md  pyproject.toml
plugins/enthusiast-agent-invoice-scanning/tests/: test_update_stock_levels_tool.py
plugins/enthusiast-agent-ocr-to-order/: README.md  pyproject.toml
plugins/enthusiast-agent-order-intake/: README.md  pyproject.toml
plugins/enthusiast-agent-product-web-scraper/: README.md  pyproject.toml
plugins/enthusiast-agent-re-act/: pyproject.toml
plugins/enthusiast-agent-tool-calling/: pyproject.toml
plugins/enthusiast-agent-tools/: README.md  pyproject.toml
plugins/enthusiast-agent-user-manual-search/: README.md  pyproject.toml
plugins/enthusiast-common/: pyproject.toml
plugins/enthusiast-common/enthusiast_common/: __init__.py  interfaces.py  structures.py  utils.py
plugins/enthusiast-file-parsers/: pyproject.toml
plugins/enthusiast-file-parsers/enthusiast_file_parsers/: image.py  text.py
plugins/enthusiast-model-azureopenai/: pyproject.toml
plugins/enthusiast-model-azureopenai/enthusiast_model_azureopenai/: language_model.py
plugins/enthusiast-model-azureopenai/enthusiast_model_openai/: embedding.py  language_model.py
plugins/enthusiast-model-google/: pyproject.toml
plugins/enthusiast-model-google/enthusiast_model_google/: embedding.py  language_model.py
plugins/enthusiast-model-mistral/: pyproject.toml
plugins/enthusiast-model-mistral/enthusiast_model_mistral/: embedding.py  language_model.py
plugins/enthusiast-model-ollama/: pyproject.toml
plugins/enthusiast-model-ollama/enthusiast_model_ollama/: __init__.py  embedding.py  language_model.py
plugins/enthusiast-model-openai/: pyproject.toml
plugins/enthusiast-model-openai/enthusiast_model_openai/: __init__.py  embedding.py  language_model.py  utils.py
plugins/enthusiast-shopify/: README.md  pyproject.toml
plugins/enthusiast-shopify/tests/: plugin_test.py
plugins/enthusiast-source-medusa/: pyproject.toml
plugins/enthusiast-source-medusa/enthusiast-source-medusa/: source.py
plugins/enthusiast-source-medusa/enthusiast_source_medusa/: __init__.py  exceptions.py  medusa_api_client.py  medusa_integration.py  medusa_platform_connector.py  medusa_product_source.py  source.py
plugins/enthusiast-source-medusa/tests/: test_update_stock.py
plugins/enthusiast-source-sample/: pyproject.toml
plugins/enthusiast-source-sample/enthusiast_source_sample/: document_source.py  product_source.py  sample_documents.csv
plugins/enthusiast-source-sanitycms/: pyproject.toml
plugins/enthusiast-source-sanitycms/enthusiast-source-sanitycms/: __init__.py  source.py
plugins/enthusiast-source-sanitycms/enthusiast_source_sanitycms/: source.py
plugins/enthusiast-source-shopify/: pyproject.toml
plugins/enthusiast-source-shopify/enthusiast_source_shopify/: source.py
plugins/enthusiast-source-shopware/: README.md  pyproject.toml
plugins/enthusiast-source-shopware/enthusiast_source_shopware/: __init__.py  source.py
plugins/enthusiast-source-solidus/: pyproject.toml
plugins/enthusiast-source-solidus/enthusiast-source-solidus/: source.py
plugins/enthusiast-source-solidus/enthusiast_source_solidus/: source.py
plugins/enthusiast-source-woocommerce/: README.md  pyproject.toml
plugins/enthusiast-source-woocommerce/enthusiast_source_woocommerce/: __init__.py  source.py
plugins/enthusiast-source-wordpress/: pyproject.toml
plugins/enthusiast-source-wordpress/enthusiast_source_wordpress/: __init__.py  source.py
plugins/enthusiast-tool-create-answer/: pyproject.toml
plugins/enthusiast-tool-create-answer/enthusiast_tool_create_answer/: __init__.py  tool.py
server/: Dockerfile  Dockerfile.development  README.md  conftest.py  docker-entrypoint-development.sh  docker-entrypoint.sh  pyproject.dev.toml  pyproject.toml  requirements.txt  sample.env
server/account/: admin.py  models.py  permissions.py  pipelines.py  serializers.py  services.py  urls.py  views.py
server/account/migrations/: 0001_initial.py  0002_customuser_is_service_account.py  0002_user_is_service_account.py  0003_user_is_limited_admin.py
server/account/services/: __init__.py  service_accounts.py  sso_provider.py  user.py
server/account/tests/: test_permissions.py  test_pipelines.py  test_user_views.py
server/account/views/: accounts.py  auth.py  login.py  service_accounts.py  users.py
server/agent/: callbacks.py  consumers.py  conversation_file_message_service.py  injector.py  models.py  repositories.py  routing.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
server/agent/agentic_execution/: services.py  tasks.py  urls.py  views.py
server/agent/conversation/: __init__.py  manager.py  service.py
server/agent/core/: __init__.py  agent.py  builder.py  callbacks.py  injector.py  limited_chat_memory.py  llm_provider.py  persist_intermediate_steps_mixin.py  persistent_chat_history.py  repositories.py  summary_chat_memory.py  tool_manager.py  tool_registry.py
server/agent/execution/: registry.py  services.py  tasks.py  urls.py  views.py
server/agent/migrations/: 0001_initial.py  0002_alter_conversation_dimensions.py  0002_remove_conversation_system_name_and_more.py  0003_conversation_name.py  0003_conversation_summary.py  0007_agentconfiguration.py  0018_message_is_file.py  (+18 more)
server/catalog/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
server/ecl/: apps.py  models.py  serializers.py  tasks.py  urls.py
server/pecl/: asgi.py  celery.py  manage.py  settings.py  urls.py
server/sync/: base.py  serializers.py  tasks.py  urls.py  utils.py  views.py
server/utils/: base_registry.py  functions.py  serializers.py
(+861 files in other folders)
