[project]
name = "enthusiast-agent-order-intake"
version = "1.3.0"
description = "Order Intake Agent for Enthusiast"
authors = [
    {name = "Damian Sowiński",email = "damian.sowinski@upsidelab.io"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "enthusiast-common (>=1.7.0,<2.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "enthusiast-agent-tool-calling (>=1.2.0)",
    "enthusiast-agent-tools (>=1.0.0,<2.0.0)",
    "enthusiast-agent-product-search (>=1.3.0,<2.0.0)",
]

[project.urls]
Homepage = "https://upsidelab.io/tools/enthusiast"
Documentation = "https://upsidelab.io/tools/enthusiast/agents/order-intake"
Repository = "https://github.com/upsidelab/enthusiast.git"
Issues = "https://github.com/upsidelab/enthusiast/issues"

[tool.poetry.dependencies]
enthusiast-common = {path = "../enthusiast-common", develop = true}
enthusiast-agent-tool-calling = {path = "../enthusiast-agent-tool-calling", develop = true}
enthusiast-agent-product-search = {path = "../enthusiast-agent-product-search", develop = true}

[tool.poetry]
packages = [{include = "enthusiast_agent_order_intake", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
