[project]
name = "enthusiast-agent-re-act"
version = "1.1.0"
description = "Base implementation of a ReAct agent for Enthusiast"
authors = [
    {name = "Rafal Cymerys",email = "rafal@upsidelab.io"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "enthusiast-common (>=1.2.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)"
]

[tool.poetry]
packages = [{include = "enthusiast_agent_re_act", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
