[project]
name = "enthusiast-agent-tools"
version = "1.0.0"
description = "Shared tools for Enthusiast agents"
authors = [
    {name = "Mateusz Porebski", email = "mateusz.porebski@upsidelab.io"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "enthusiast-common (>=1.6.0,<2.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
]

[project.urls]
Homepage = "https://upsidelab.io/tools/enthusiast"
Documentation = "https://upsidelab.io/tools/enthusiast/agents/tools"
Repository = "https://github.com/upsidelab/enthusiast.git"
Issues = "https://github.com/upsidelab/enthusiast/issues"

[tool.poetry]
packages = [{include = "enthusiast_agent_tools", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
