[project]
name = "enthusiast-agent-user-manual-search"
version = "1.3.0"
description = "User Manual Search Agent for Enthusiast"
authors = [
    {name = "Damian Sowiński",email = "damian.sowinski@upsidelab.io"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "enthusiast-common (>=2.0.0,<3.0.0)",
    "langchain (>=1.0.0,<2.0.0)",
    "enthusiast_agent_tool_calling (>=1.1.0)"
]

[project.urls]
Homepage = "https://upsidelab.io/tools/enthusiast"
Documentation = "https://upsidelab.io/tools/enthusiast/agents/user-manual-search"
Repository = "https://github.com/upsidelab/enthusiast.git"
Issues = "https://github.com/upsidelab/enthusiast/issues"

[tool.poetry]
packages = [{include = "enthusiast_agent_user_manual_search", from = "src"}]

[tool.poetry.dependencies]
enthusiast-common = {path = "../enthusiast-common", develop = true}
enthusiast-agent-tool-calling = {path = "../enthusiast-agent-tool-calling", develop = true}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
