[tool.poetry]
name = "enthusiast-common"
version = "1.4.0"
description = "Core interfaces for developing custom Enthusiast plugins and integrations."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = ">=0.3.66,<0.4.0"
pydantic-settings = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
