[tool.poetry]
name = "enthusiast-common"
version = "1.6.1"
description = "Core interfaces for developing custom Enthusiast plugins and integrations."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^0.3.83"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
