[tool.poetry]
name = "enthusiast-model-azureopenai"
version = "1.3.0"
description = "A plugin for Enthusiast that provides an OpenAI connector."
authors = ["Damian Sowiński <damian.sowinski@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain-core = ">=1.0.0,<2.0.0"
python = "^3.10"
enthusiast-common = {path = "../enthusiast-common", develop = true}
openai = "^1.86.0"
langchain-openai = "^0.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
