[tool.poetry]
name = "enthusiast-model-ollama"
version = "0.2.0"
description = ""
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
enthusiast-common = "^0.5.0"
langchain-ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
