[tool.poetry]
name = "enthusiast-model-ollama"
version = "1.0.0"
description = "A plugin for Enthusiast that provides an Ollama connector."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
enthusiast-common = ">=1,<2"
langchain-ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
