[tool.poetry]
name = "enthusiast-model-openai"
version = "1.0.0"
description = "A plugin for Enthusiast that provides an OpenAI connector."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
enthusiast-common = ">=1,<2"
openai = "^1.59.6"
langchain-openai = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
