[tool.poetry]
name = "enthusiast-model-openai"
version = "1.3.0"
description = "A plugin for Enthusiast that provides an OpenAI connector."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain-core = "^0.3.66"
python = "^3.10"
enthusiast-common = ">=1,<2"
openai = "^1.86.0"
langchain-openai = "^0.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
