[tool.poetry]
name = "enthusiast-source-solidus"
version = "0.1.1"
description = ""
authors = ["Kuba Szczęśniak <kuba.szczęśniak@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
enthusiast-common = ">=0.2,<1"
shopifyapi = "^12.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
