[tool.poetry]
name = "enthusiast-source-sanitycms"
version = "0.1.1"
description = "This Enthusiast plugin enables the import of document data from Sanity CMS."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
enthusiast-common = ">=0.2,<1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
