[tool.poetry]
name = "enthusiast-source-sanitycms"
version = "1.0.0"
description = "A plugin for Enthusiast that provides a SanityCMS documents importer."
authors = ["Kuba Szczęśniak <kuba.szczesniak@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
enthusiast-common = ">=1,<2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
