[tool.poetry]
name = "enthusiast-source-shopware"
version = "1.3.0"
description = "A plugin for Enthusiast that provides a Shopware products importer."
authors = ["Mateusz Porebski <mateusz.porebski@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
enthusiast-common = {path = "../enthusiast-common", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
