[tool.poetry]
name = "enthusiast-source-solidus"
version = "1.2.0"
description = "A plugin for Enthusiast that provides a Solidus products importer."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
enthusiast-common = ">=1.4,<2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
