[tool.poetry]
name = "enthusiast-source-woocommerce"
version = "0.1.0"
description = ""
authors = ["jakubl2290", "Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
enthusiast-common = "^0.4.0"
woocommerce = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
