[tool.poetry]
name = "enthusiast-source-wordpress"
version = "0.1.0"
description = ""
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
enthusiast-common = "^0.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
