[project]
name = "enthusiast-tool-create-answer"
version = "0.1.0"
description = ""
authors = [
    {name = "Dawid Mularczyk", email = "dawid.mularczyk@onet.pl"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
enthusiast-common = {path = "/Users/dawid/PycharmProjects/enthusiast/plugins/enthusiast-common"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"